# PDB

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
dataset/: README.md  __init__.py  base.py
dataset/bigcodebench/: README.md  handler.py
dataset/bigcodebench/data/: claude.json  gemini.json  gpt.json  long_claude.json  long_data.json  long_gemini.json  long_gpt.json
dataset/bigcodebench/install/: pyproject.toml  worker_loop.py
dataset/bigcodebench/install/Requirements/: requirements-eval.txt
dataset/bigcodebench/install/bigcodebench/: evaluate.py
dataset/livecodebench/: README.md  handler.py
dataset/livecodebench/data/: claude.json  full_data.json  gemini.json  gpt.json  long_claude.json  long_data.json  long_gemini.json  long_gpt.json
dataset/livecodebench/install/: .gitignore  pyproject.toml  worker_loop.py
dataset/livecodebench/install/lcb_runner/benchmarks/: code_generation.py
dataset/livecodebench/install/lcb_runner/evaluation/: compute_code_generation_metrics.py  testing_util.py
dataset/livecodebench/install/lcb_runner/prompts/: code_generation.py
dataset/livecodebench/install/lcb_runner/prompts/few_shot_examples/generation/: test.py
dataset/livecodebench/install/lcb_runner/runner/: custom_evaluator.py
dataset/swesmith/: README.md  __init__.py  exec_backend.py  handler.py
dataset/swesmith/install/: README.md
dataset/swesmith/install/SWE-smith/scripts/: bug_gen_modal.py
dataset/swesmith/install/SWE-smith/swesmith/bug_gen/adapters/: __init__.py  cpp.py  java.py  ruby.py
dataset/swesmith/install/SWE-smith/swesmith/bug_gen/procedural/: base.py
dataset/swesmith/install/SWE-smith/swesmith/bug_gen/procedural/cpp/: __init__.py  base.py  control_flow.py  operations.py  remove.py  replace_strings.py
dataset/swesmith/install/SWE-smith/swesmith/bug_gen/procedural/java/: __init__.py  base.py  boolean.py  control_flow.py  literals.py  loops.py  operations.py  remove.py  returns.py  wrappers.py
dataset/swesmith/install/SWE-smith/swesmith/bug_gen/procedural/ruby/: __init__.py  base.py  control_flow.py  nil_introduction.py  operations.py  remove.py  ruby_specific.py
dataset/swesmith/install/SWE-smith/swesmith/bug_gen/procedural/rust/: __init__.py  control_flow.py  operations.py  remove.py
dataset/swesmith/install/SWE-smith/swesmith/issue_gen/: get_static.py
dataset/swesmith/install/SWE-smith/swesmith/profiles/: __init__.py  base.py  ruby.py  typescript.py
dataset/swesmith/install/SWE-smith/tests/bug_gen/adapters/: test_cpp_adapter.py  test_ruby_properties.py
dataset/swesmith/install/SWE-smith/tests/bug_gen/procedural/cpp/: __init__.py  test_cpp_control_flow.py  test_cpp_operations.py  test_cpp_remove.py  test_cpp_replace_strings.py
dataset/swesmith/install/SWE-smith/tests/bug_gen/procedural/java/: test_java_boolean.py  test_java_control_flow.py  test_java_literals.py  test_java_loops.py  test_java_operations.py  test_java_remove.py  test_java_returns.py  test_java_wrappers.py
dataset/swesmith/install/SWE-smith/tests/bug_gen/procedural/ruby/: test_ruby_control_flow.py  test_ruby_nil_introduction.py  test_ruby_operations.py  test_ruby_remove.py  test_ruby_specific.py
dataset/swesmith/install/SWE-smith/tests/profiles/: test_profiles_ruby.py
results/bigcodebench/bug_data/: bigcodebench_pdb_multi.json
results/livecodebench/bug_data/: livecodebench_pdb_multi.json
scripts/: README.md  run_bug_gen_multi.sh  run_bug_gen_single.sh  run_debug_eval.sh  simple_debug_eval.sh
src/: api_config.py  bug_correct.py  bug_generation.py  config.py  evaluator.py  examples.py  merge.py  module.py  preprocess.py  rewrite.py  utils.py
