[project]
name = "precise-debugging-benchmarking"
version = "0.1.0"
description = "PDB: Precise Debugging Benchmarking — an automatic pipeline that converts coding datasets into debugging benchmarks with edit-level precision/recall metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Wang (Bill) Zhu" },
]
dependencies = [
    "dspy>=3.1.3",
    "litellm>=1.77",
    "numpy>=1.26",
    "tqdm>=4.66",
    "huggingface-hub>=1.10",
    "pandas>=2.2",
    "pyarrow>=18",
    "datasets>=4.2",
]

[project.optional-dependencies]
# Agentic debugging via Claude Code CLI (optional — only needed for the agentic ablation).
agentic = [
    "anthropic>=0.40",
]
# Extra data-processing niceties for analysis notebooks.
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.13",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
