[project]
name = "livecodebench"
version = "0.1.0"
description = "LiveCodeBench (vendored for debugeval)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "annotated-types>=0.7.0",
    "anthropic>=0.42.0",
    "cohere>=5.13.6",
    # Pinned <4 because the existing HF cache at ~/.cache/huggingface/datasets/
    # livecodebench___code_generation_lite was built with datasets 3.x and uses
    # the older `release_latest-version_tag=...` config naming. datasets 4.x
    # expects `default-version_tag=...` and can't find the cached entries
    # (HF Hub is unreachable offline, so re-download isn't an option).
    "datasets>=3.2.0,<4.0",
    "google-genai>=0.6.0",
    "mistralai==0.4.2",
    "openai>=1.59.6",
    "pebble>=5.1.0",
    "torch>=2.3.0",
    "vllm>=0.5.0.post1",
    "together>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lcb_runner"]
